<resources>
    <string name="app_name">NotiFlash</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="title_activity_input_card">InputCardActivity</string>
    <string name="front_text">Front text</string>
    <string name="saved">saved</string>
    <string name="save">save</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="change">change</string>
    <string name="folder_updated">folder name updated</string>
    <string name="menu_edit_folder_name">edit folder name</string>
</resources>
