...
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"/>
        <ImageView
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"/>
        <ImageView
            android:id="@+id/play_button"
...
